--- a/src/styles.css
+++ b/src/styles.css
@@ -231,6 +231,7 @@
 .trade_filters_item {
   width: 50%;
   text-align: center;
+  position: relative;
 }
 
 .trade_filters_item_search {
@@ -281,6 +282,32 @@
 .btn.cancel {
   bottom: 30px;
   left: 120px;
+}
+
+.module_container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.module_size {
+  width: 45px;
+  height: 45px;
+}
+
+.module_image {
+  width: 100%;
+  height: 100%;
+}
+
+.trade_new_lot_choose_module {
+  position: absolute;
+  bottom: -8px;
+  left: 130px;
+  width: 60%;
+  height: 90px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 /*# sourceMappingURL=styles.css.map */
