--- a/src/styles.scss
+++ b/src/styles.scss
@@ -221,6 +221,7 @@
 .trade_filters_item{
   width: 50%;
   text-align: center;
+  position: relative;
 }
 .trade_filters_item_search{
   display: flex;
@@ -265,4 +266,29 @@
     bottom: 30px;
     left: 120px;
   }
+}
+
+
+.module_container{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.module_size{
+  width: 45px;
+  height: 45px;
+}
+.module_image{
+  width: 100%;
+  height: 100%;
+}
+
+.trade_new_lot_choose_module{
+  position: absolute;
+  bottom: -8px;
+  left: 130px;
+  width: 60%;
+  height: 90px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
