--- a/src/styles.css
+++ b/src/styles.css
@@ -178,6 +178,17 @@
   flex-direction: column;
   gap: 20px;
 }
+.trade_container::before {
+  content: "";
+  background-image: url("src/assets/images/trade_background.jpg");
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0.25;
+}
 
 .trade_filters_wrapper {
   position: absolute;
@@ -308,6 +319,54 @@
   height: 90px;
   overflow: hidden;
   overflow-y: scroll;
+}
+
+.confirm_wrapper {
+  z-index: 1100;
+  width: 120px;
+  height: 100px;
+  border: 1px solid red;
+  background-color: black;
+  position: absolute;
+}
+
+.confirm_inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border: 2px solid green;
+}
+
+.confirm_close_btn {
+  position: absolute;
+  left: 80px;
+  bottom: 5px;
+  border: 1px solid red;
+  background-color: white;
+  padding: 5px 10px;
+}
+
+.confirm_ok_btn {
+  position: absolute;
+  left: 5px;
+  bottom: 5px;
+  padding: 5px 10px;
+}
+
+.confirm_input {
+  position: absolute;
+  outline: none;
+  width: 50px;
+  padding: 5px;
+  overflow-y: hidden;
+  left: 5px;
+  top: 20px;
+}
+
+.confirm_text {
+  position: absolute;
+  top: 27px;
+  left: 80px;
 }
 
 /*# sourceMappingURL=styles.css.map */
