--- a/src/styles.css
+++ b/src/styles.css
@@ -325,23 +325,37 @@
   z-index: 1100;
   width: 120px;
   height: 100px;
-  border: 1px solid red;
   background-color: black;
   position: absolute;
+  right: -140px;
+  border: 1px solid white;
+  border-radius: 12px;
+}
+.confirm_wrapper::before {
+  border-radius: 12px;
+  opacity: 0.35;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  top: 0;
+  right: 0;
+  background-image: url("assets/images/trade_background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .confirm_inner {
   width: 100%;
   height: 100%;
   position: relative;
-  border: 2px solid green;
 }
 
 .confirm_close_btn {
   position: absolute;
-  left: 80px;
-  bottom: 5px;
-  border: 1px solid red;
+  right: -30px;
+  top: -30px;
+  border-radius: 12px;
   background-color: white;
   padding: 5px 10px;
 }
@@ -351,12 +365,15 @@
   left: 5px;
   bottom: 5px;
   padding: 5px 10px;
+  width: 90%;
+  border-radius: 12px;
 }
 
 .confirm_input {
+  border-radius: 12px;
   position: absolute;
   outline: none;
-  width: 50px;
+  width: 75%;
   padding: 5px;
   overflow-y: hidden;
   left: 5px;
@@ -365,8 +382,9 @@
 
 .confirm_text {
   position: absolute;
-  top: 27px;
-  left: 80px;
+  top: 2px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 /*# sourceMappingURL=styles.css.map */
