--- a/src/styles.css
+++ b/src/styles.css
@@ -235,6 +235,7 @@
 }
 
 .trade_filters_inner {
+  gap: 100px;
   display: flex;
   justify-content: space-between;
 }
@@ -247,8 +248,8 @@
 
 .trade_filters_item_search {
   display: flex;
-  justify-content: center;
-  gap: 50px;
+  flex-direction: column;
+  gap: 20px;
   margin-top: 20px;
   position: relative;
 }
@@ -276,10 +277,36 @@
 }
 
 .trade_filters_dropdown {
-  display: flex;
-  flex-direction: column;
   text-align: start;
   gap: 5px;
+}
+
+.border_red {
+  border: 1px solid red;
+}
+
+.trade_filters_input_wrapper {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.double_width {
+  width: 200%;
+}
+
+.direction_column {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.direction_row {
+  justify-content: space-around;
+  gap: 5px;
+  display: flex;
+  flex-direction: row;
 }
 
 .btn {
@@ -312,11 +339,10 @@
 }
 
 .trade_new_lot_choose_module {
-  position: absolute;
-  bottom: -8px;
-  left: 130px;
-  width: 60%;
-  height: 90px;
+  width: 300px;
+  padding: 0 20px;
+  margin-top: 20px;
+  height: 120px;
   overflow: hidden;
   overflow-y: scroll;
 }
@@ -385,6 +411,44 @@
   top: 2px;
   left: 50%;
   transform: translate(-50%, 0);
+}
+
+.new_lot_inputs {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.new_lot_input {
+  border: 1px solid white;
+  background-color: inherit;
+  width: 76px;
+  border-radius: 10px;
+  padding: 0 5px;
+  color: white;
+  text-align: center;
+  height: 26px;
+}
+.new_lot_input::placeholder {
+  color: white;
+  opacity: 0.5;
+}
+
+.new_lot_button {
+  padding: 5px 10px;
+  border-radius: 10px;
+  border: 0;
+  outline: none;
+  width: 90px;
+}
+.new_lot_button:hover {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border: 1px solid white;
+}
+.new_lot_button:active {
+  border: 1px solid #00E000;
+  color: #00E000;
 }
 
 /*# sourceMappingURL=styles.css.map */
