--- a/src/css/globalStyles.css
+++ b/src/css/globalStyles.css
@@ -70,11 +70,16 @@ span {
 
 .planet_main_wrapper {
   position: relative;
-  padding: 20px;
   left: 70px;
   top: 50px;
-  border: 2px solid white;
-  width: 730px;
+  border-radius: 12px;
+  width: calc(100% - 200px);
+  min-width: 730px;
+  height: calc(100vh - 200px);
+  min-height: 600px;
+  display: flex;
+  padding: 0;
+  margin-bottom: 100px;
 }
 
 /*# sourceMappingURL=globalStyles.css.map */
