--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -1,14 +1,16 @@
 .planet_item{
+  z-index: 1;
   position: relative;
-  background-color: white;
   padding: 0;
   width: 100%;
   border: 2px solid white;
   border-radius: 0 12px 12px 0;
   &.planet_list{
+    padding-right: 5px;
     width: 25%;
     min-width: 200px;
     border-radius: 12px 0 0 12px;
+    border-right: 1px solid rgba(0, 0, 0, .5);
   }
 }
 .planet_icon{
@@ -25,12 +27,151 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    animation: 150s linear planet_spin infinite;
+    animation: 200s linear planet_spin infinite;
   }
 }
 .planet_data_name{
+  color: #daa548;
+  cursor: default;
+  font-size: 105%;
+  line-height: 125%;
   font-family: FUTURE, sans-serif;
+  text-align: center;
+  &.link{
+    cursor: pointer;
+    color:  #00E000;
+  }
 }
+
+.planetary_system_wrapper{
+  z-index: 200;
+  position: absolute;
+  left: 70px;
+  top: 85px;;
+  border: 2px solid white;
+  border-radius: 12px;
+  width: 76%;
+  height: 60vh;
+  padding: 100px;
+  &::before{
+    border-radius: 12px;
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("../assets/images/planetary_system_bg.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+.planetary_system_close_button{
+  padding: 5px 10px;
+  border-radius: 8px;
+  outline: none;
+  border: 1px solid black;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+}
+.planet_navigation{
+  width: 100%;
+  height: 40px;
+  border-radius: 0 12px 0 0;
+  display: flex;
+  gap: 1px;
+}
+.planet_navigation_btn{
+  position: relative;
+  background-color: inherit;
+  width: 25%;
+  border: 1px solid black;
+  outline: none;
+  color:  #00E000;
+  font-family: FUTURE, sans-serif;
+  &:last-child{
+    border-radius: 0 12px 0 0;
+  }
+  &:after{
+    z-index: -2;
+    position: absolute;
+    content: '';
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, .28);
+  }
+  &:active{
+    border-bottom: 1px solid white;
+  }
+}
+
+.order_list_wrapper{
+  min-height: 30%;
+}
+
+.buildings_wrapper{
+  position: relative;
+}
+.buildings_infrastructure{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100%;
+  gap: 5.1px;
+  justify-content: space-between;
+}
+.building_card{
+  width: 16%;
+  height: 225px;
+  min-width: 150px;
+  border: 1px solid white;
+}
+.building_name{
+  width: 100%;
+  height: 15%;
+  color: #daa548;
+  font-family: FUTURE, sans-serif;
+  background-color: rgba(15, 65, 140, .5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.building_picture{
+  height: 60%;
+  width: 100%;
+  & img{
+    width: 100%;
+    height: 100%;
+  }
+}
+.building_controls{
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 100%;
+  height: 25%;
+}
+.building_card_btn{
+  height: 30px;
+  background-color: rgba(15, 65, 140, .5);
+  color: #daa548;
+  border: 1px solid white;
+  &:active{
+    color:  #00E000;
+  }
+}
+
+
+
+
+
+
+
 
 
 
@@ -47,3 +188,5 @@
     transform: rotate(360deg);
   }
 }
+
+
