--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -140,6 +140,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 .building_picture{
   height: 60%;
