--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -133,6 +133,7 @@
 }
 
 .building_card {
+  position: relative;
   width: 16%;
   height: 225px;
   min-width: 150px;
@@ -256,6 +257,16 @@
 }
 .modules_line.module_full_mass {
   width: 35%;
+}
+
+.building_amount {
+  position: absolute;
+  right: 5px;
+  top: 40px;
+  padding: 3px 5px;
+  color: #00E000;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 @keyframes planet_spin {
