--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -129,6 +129,7 @@
   justify-content: space-between;
 }
 .building_card{
+  position: relative;
   width: 16%;
   height: 225px;
   min-width: 150px;
@@ -246,6 +247,16 @@
   &.module_full_mass{
     width: 35%;
   }
+}
+
+.building_amount{
+  position: absolute;
+  right: 5px;
+  top: 40px;
+  padding: 3px 5px;
+  color:  #00E000;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 
