--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -116,6 +116,11 @@
 .order_list_wrapper{
   min-height: 30%;
 }
+.test{
+  display: flex;
+  color: white;
+  justify-content: space-around;
+}
 
 .buildings_wrapper{
   position: relative;
