--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -119,6 +119,12 @@
   min-height: 30%;
 }
 
+.test {
+  display: flex;
+  color: white;
+  justify-content: space-around;
+}
+
 .buildings_wrapper {
   position: relative;
 }
