--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -117,12 +117,21 @@
   min-height: 30%;
 }
 .building_in_progress_wrapper{
+  position: relative;
   display: flex;
   color: white;
   justify-content: space-around;
   padding: 10px 10px 0;
   align-items: center;
-  border-bottom: 1px solid white;
+  ::after{
+    width: 100%;
+    border-bottom: 1px solid white;
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    opacity: .05;
+  }
 }
 .building_in_progress_wrapper-name{
   & span{
