--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -44,6 +44,20 @@
   cursor: pointer;
   color: #00E000;
 }
+.planet_data_name.peoples {
+  position: relative;
+  margin-top: 10px;
+}
+.planet_data_name.peoples::after {
+  position: absolute;
+  content: "";
+  border-top: 1px solid white;
+  opacity: 0.4;
+  top: -5px;
+  left: 0;
+  width: 80%;
+  margin-left: 10%;
+}
 
 .planetary_system_wrapper {
   z-index: 200;
