--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -42,6 +42,20 @@
     cursor: pointer;
     color:  #00E000;
   }
+  &.peoples{
+    position: relative;
+    margin-top: 10px;
+    &::after{
+      position: absolute;
+      content: '';
+      border-top: 1px solid white;
+      opacity: .4;
+      top: -5px;
+      left: 0;
+      width: 80%;
+      margin-left: 10%;
+    }
+  }
 }
 
 .planetary_system_wrapper{
