--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -42,7 +42,7 @@
     cursor: pointer;
     color:  #00E000;
   }
-  &.peoples{
+  &.border_top{
     position: relative;
     margin-top: 10px;
     &::after{
