--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -128,7 +128,9 @@
 }
 
 .order_list_wrapper{
-  min-height: 30%;
+  z-index: -1;
+  margin-top: 40px;
+  min-height: calc(30% - 40px);
 }
 .building_in_progress_wrapper{
   position: relative;
@@ -234,19 +236,17 @@
 
 
 .planet_storage_wrapper{
-  position: absolute;
-  left: -2px;
-  top: 40px;
+  margin-top: 40px;
   border-radius: 12px;
   padding: 100px;
   width: calc(100% - 200px);
 }
 
 .planet_storage_navigation{
-  width: 100%;
   position: absolute;
-  top: 0;
-  right: -2px;
+  top: 40px;
+  left: 0;
+  width: 100%;
   height: 40px;
   display: flex;
   gap: 2px;
@@ -255,13 +255,13 @@
 .planet_storage_modules{
   position: absolute;
   left: 0;
-  top: 40px;
+  top: 80px;
   width: 100%;
-  height: calc(100% - 8px);
+  height: 200px;
   overflow-y: scroll;
   overflow-x: hidden;
   &::after{
-    background-color: rgba(15, 65, 140, .5);
+    background-color: rgba(15, 65, 140);
     opacity: .5;
     content: '';
     position: absolute;
@@ -279,6 +279,23 @@
   justify-content: space-between;
   align-items: center;
 }
+.planet_storage_materials_line {
+  width: calc(100% - 42px);
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modules_materials{
+  width: 80%;
+  text-align: center;
+  color: #daa548;
+  font-weight: bold;
+  font-family: FUTURE, sans-serif;
+  cursor: default;
+}
+
 .modules_line{
   width: 80%;
   text-align: center;
