--- a/src/css/globalStyles.css
+++ b/src/css/globalStyles.css
@@ -100,4 +100,21 @@ span {
   bottom: 0;
 }
 
+.error_wrapper {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  padding: 10px 10px;
+  background-color: rgb(173, 12, 89);
+  text-align: center;
+  border-radius: 12px;
+  z-index: 999999999;
+}
+.error_wrapper span {
+  font-family: FUTURE, sans-serif;
+  color: #e8980d;
+}
+
 /*# sourceMappingURL=globalStyles.css.map */
