--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -170,6 +170,7 @@
 
 
 
+
 .buildings_wrapper{
   position: relative;
 }
@@ -180,6 +181,7 @@
   height: 100%;
   gap: 5.1px;
   justify-content: space-between;
+  position: relative;
 }
 .building_card{
   position: relative;
