--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -360,6 +360,23 @@
 
 
 
+.molnia{
+  position: absolute;
+  width: 20px;
+  height: 40px;
+  bottom: 65px;
+  left: 10px;
+  & img{
+    width: 100%;
+    cursor: pointer;
+  }
+}
+
+
+
+
+
+
 
 
 
