--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -375,8 +375,20 @@
 .molnia img {
   width: 100%;
   cursor: pointer;
+  animation: blink 1s linear infinite;
 }
 
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @keyframes planet_spin {
   0% {
     transform: rotate(0);
