--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -369,11 +369,18 @@
   & img{
     width: 100%;
     cursor: pointer;
+    animation: blink 1s linear infinite;
   }
 }
 
 
 
+
+@keyframes blink {
+  0%{opacity: 0}
+  50%{opacity: 1}
+  100%{opacity: 0}
+}
 
 
 
