--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -128,6 +128,9 @@
 .planet_navigation_btn:active {
   border-bottom: 1px solid white;
 }
+.planet_navigation_btn:hover {
+  color: white;
+}
 
 .order_list_wrapper {
   z-index: -1;
@@ -378,8 +381,32 @@
   animation: blink 1s linear infinite;
 }
 
-.big_icon {
-  width: 20px;
+.info_wrapper {
+  z-index: 99999999999;
+  background-color: black;
+  max-width: 300px;
+  border: 1px solid green;
+  padding: 5px;
+  position: absolute;
+  right: 50%;
+  top: 0;
+  border-radius: 12px;
+  transform: translate(-50%, 0);
+}
+.info_wrapper h4 {
+  white-space: normal;
+  text-align: center;
+  color: greenyellow;
+}
+
+.help_container {
+  position: absolute;
+  right: 0;
+  bottom: 60px;
+}
+
+.red {
+  color: red;
 }
 
 @keyframes blink {
