--- a/src/css/tradeStyles.scss
+++ b/src/css/tradeStyles.scss
@@ -9,6 +9,9 @@
   border-radius: 6px;
   border: 1px solid rgba(0, 0, 0, 0);
   cursor: pointer;
+  & img{
+    width: 20px;
+  }
   &:hover{
     border-left: 1px solid yellow;
     border-right: 1px solid yellow;
