--- a/src/css/tradeStyles.scss
+++ b/src/css/tradeStyles.scss
@@ -4,6 +4,12 @@
   gap: 5px;
 }
 
+.colored{
+  border-radius: 50%;
+  border: 1px solid  #00E000;
+  padding: 2px 4px;
+  background-color: white;
+}
 .top_nav_money_icon{
   padding: 3px 6px;
   border-radius: 6px;
@@ -11,6 +17,9 @@
   cursor: pointer;
   & img{
     width: 20px;
+    &.small{
+      width: 10px;
+    }
   }
   &:hover{
     border-left: 1px solid yellow;
