--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -158,16 +158,16 @@
 
 .building_in_progress_wrapper-name span {
   color: #00E000;
-  font-size: 20px;
+  font-size: calc(12px + 4 * (100vw - 800px) / 1120);
   font-family: FUTURE, sans-serif;
 }
 
 .building_in_progress_wrapper-timer span {
   color: #daa548;
-  font-size: 16px;
+  font-size: calc(12px + 4 * (100vw - 800px) / 1120);
 }
 .building_in_progress_wrapper-timer strong {
-  font-size: 16px;
+  font-size: calc(12px + 4 * (100vw - 800px) / 1120);
   color: #00E000;
 }
 
@@ -370,7 +370,6 @@
 
 .molnia {
   position: absolute;
-  width: 20px;
   height: 40px;
   bottom: 65px;
   left: 10px;
