--- a/src/css/globalStyles.css
+++ b/src/css/globalStyles.css
@@ -112,7 +112,7 @@ span {
   border-radius: 12px;
   z-index: 999999999;
 }
-.error_wrapper span {
+.error_wrapper h3 {
   font-family: FUTURE, sans-serif;
   color: #e8980d;
 }
