--- a/src/css/globalStyles.scss
+++ b/src/css/globalStyles.scss
@@ -105,7 +105,7 @@ span{
   text-align: center;
   border-radius: 12px;
   z-index: 999999999;
-  & span{
+  & h3{
     font-family: FUTURE, sans-serif;
     color: #e8980d;
   }
