--- a/src/css/globalStyles.scss
+++ b/src/css/globalStyles.scss
@@ -97,9 +97,9 @@ span{
 .error_wrapper{
   position: absolute;
   left: 50%;
-  top: 0;
+  top: -22px;
   transform: translate(-50%, -50%);
-  width: 300px;
+  width: 270px;
   padding: 10px 10px;
   background-color:  rgb(173, 12, 89);
   text-align: center;
