--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -238,6 +238,17 @@
   border-radius: 6px;
 }
 
+.medium {
+  width: 100px;
+  padding: 5px 10px;
+  border-radius: 6px;
+  border: 2px solid #00E000;
+}
+.medium:active {
+  border: 2px solid white;
+  font-size: 105%;
+}
+
 .modules_line_buttons {
   display: flex;
   gap: 10px;
