--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -234,6 +234,17 @@
   padding: 5px 10px;
   border-radius: 6px;
 }
+
+.medium{
+  width: 100px;
+  padding: 5px 10px;
+  border-radius: 6px;
+  border: 2px solid #00E000;
+  &:active{
+    border: 2px solid white;
+    font-size: 105%;
+  }
+}
 .modules_line_buttons{
   display: flex;
   gap: 10px;
