--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -271,6 +271,35 @@
   gap: 2px;
 }
 
+.modules_line_title {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgba(15, 65, 140, 0.7);
+  align-items: center;
+  cursor: default;
+}
+
+.modules_line_title_inner {
+  padding: 5px 0;
+  text-align: center;
+  width: 20%;
+  color: white;
+}
+.modules_line_title_inner.double_width {
+  width: 25%;
+}
+.modules_line_title_inner.settings {
+  width: 10%;
+  min-width: 110px;
+}
+.modules_line_title_inner.amount {
+  width: 13%;
+  margin-left: 1.5%;
+}
+.modules_line_title_inner.mass {
+  margin-left: 5%;
+}
+
 .planet_storage_modules {
   position: absolute;
   left: 0;
@@ -279,17 +308,7 @@
   height: 200px;
   overflow-y: scroll;
   overflow-x: hidden;
-}
-.planet_storage_modules::after {
-  background-color: rgb(15, 65, 140);
-  opacity: 0.5;
-  content: "";
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  z-index: -1;
+  background-color: rgba(15, 65, 140, 0.5);
 }
 
 .planet_storage_modules_line {
