--- a/src/css/globalStyles.css
+++ b/src/css/globalStyles.css
@@ -4,10 +4,18 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: "Hyatheus";
+  src: url("fonts/Hyatheus.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 * {
   margin: 0;
   padding: 0;
   font-size: 12px;
+  font-family: Hyatheus, serif !important;
+  letter-spacing: 1.5px !important;
 }
 
 h1, h2 {
