--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -1,5 +1,6 @@
 $sp_green:  #00E000 !global;
 $sp_yellow:  #daa548 !global;
+$sp_border: 1px solid rgba(43,211,237,0.6);
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -455,6 +456,7 @@ input::-webkit-inner-spin-button {
 
 
 .building_info_wrapper {
+  border: $sp_border;
   background: radial-gradient(ellipse 90% 90%, rgba(0,0,0,0.35), rgba(0,0,0,1.0)) no-repeat, url(../assets/images/value_bg_blue.png) repeat padding-box;
   position: fixed;
   top: 170px;
@@ -463,7 +465,7 @@ input::-webkit-inner-spin-button {
   display: flex;
   gap: 20px;
   color: $sp_green;
-  width: 400px;
+  width: 500px;
 }
 .building_info_description{
   color: $sp_yellow;
@@ -492,36 +494,29 @@ input::-webkit-inner-spin-button {
 }
 
 .building_info_item{
+  position: relative;
   display: flex;
   align-items: center;
-  gap: 10px;
+  width: 300px;
   cursor: default;
-  justify-content: space-between;
+  //justify-content: space-between;
   & input{
-    height: 12px;
+    position: absolute;
+    right: 80px;
+    height: 18px;
     width: 60px;
     outline: none;
     padding: 2px 4px;
     color: $sp_yellow;
     background: linear-gradient(to right, rgba(4,34,38,0.5), rgba(5,45,51,0.5) 50% ,rgba(4,34,38,0.5) 100%) no-repeat border-box;
-    border: 1px solid rgba(28,136,153,0.5);
+    border: $sp_border;
     text-align: center;
   }
-}
-
-.building_info_title{
-  display: flex;
-  color: $sp_yellow;
-  justify-content: space-between;
-}
-
-.building_info_button{
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
   & button{
-    padding: 2px 4px;
-    border: 1px solid rgba(43,211,237,0.6);
+    position: absolute;
+    right: 0;
+    padding: 0 4px;
+    border: $sp_border;
     color: #73d6e5;
     text-shadow: 0 0 5px rgba(115,214,229,0.5);
     box-shadow: inset 0 0 2px 1px rgba(43,211,237,0.25);
@@ -533,6 +528,15 @@ input::-webkit-inner-spin-button {
     &:active{
       color: $sp_yellow;
     }
+  }
+}
+
+.building_info_title{
+  display: flex;
+  color: $sp_yellow;
+  justify-content: space-between;
+  & p:last-child{
+    margin-right: 80px;
   }
 }
 
