--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -461,6 +461,7 @@ input::-webkit-inner-spin-button {
 }
 
 .building_info_wrapper {
+  border: 1px solid rgba(43, 211, 237, 0.6);
   background: radial-gradient(ellipse 90% 90%, rgba(0, 0, 0, 0.35), rgb(0, 0, 0)) no-repeat, url(../assets/images/value_bg_blue.png) repeat padding-box;
   position: fixed;
   top: 170px;
@@ -469,7 +470,7 @@ input::-webkit-inner-spin-button {
   display: flex;
   gap: 20px;
   color: #00E000;
-  width: 400px;
+  width: 500px;
 }
 
 .building_info_description {
@@ -497,21 +498,40 @@ input::-webkit-inner-spin-button {
 }
 
 .building_info_item {
+  position: relative;
   display: flex;
   align-items: center;
-  gap: 10px;
+  width: 300px;
   cursor: default;
-  justify-content: space-between;
 }
 .building_info_item input {
-  height: 12px;
+  position: absolute;
+  right: 80px;
+  height: 18px;
   width: 60px;
   outline: none;
   padding: 2px 4px;
   color: #daa548;
   background: linear-gradient(to right, rgba(4, 34, 38, 0.5), rgba(5, 45, 51, 0.5) 50%, rgba(4, 34, 38, 0.5) 100%) no-repeat border-box;
-  border: 1px solid rgba(28, 136, 153, 0.5);
+  border: 1px solid rgba(43, 211, 237, 0.6);
   text-align: center;
+}
+.building_info_item button {
+  position: absolute;
+  right: 0;
+  padding: 0 4px;
+  border: 1px solid rgba(43, 211, 237, 0.6);
+  color: #73d6e5;
+  text-shadow: 0 0 5px rgba(115, 214, 229, 0.5);
+  box-shadow: inset 0 0 2px 1px rgba(43, 211, 237, 0.25);
+  background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 100%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 100%) no-repeat border-box;
+}
+.building_info_item button:hover {
+  background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 10%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 10%) no-repeat border-box;
+  color: #19b6e5;
+}
+.building_info_item button:active {
+  color: #daa548;
 }
 
 .building_info_title {
@@ -519,26 +539,8 @@ input::-webkit-inner-spin-button {
   color: #daa548;
   justify-content: space-between;
 }
-
-.building_info_button {
-  position: absolute;
-  bottom: 5px;
-  right: 5px;
-}
-.building_info_button button {
-  padding: 2px 4px;
-  border: 1px solid rgba(43, 211, 237, 0.6);
-  color: #73d6e5;
-  text-shadow: 0 0 5px rgba(115, 214, 229, 0.5);
-  box-shadow: inset 0 0 2px 1px rgba(43, 211, 237, 0.25);
-  background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 100%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 100%) no-repeat border-box;
-}
-.building_info_button button:hover {
-  background: linear-gradient(to top, rgba(43, 211, 237, 0.15), rgba(43, 211, 237, 0.05) 10%) no-repeat border-box, linear-gradient(to top, rgba(9, 13, 15, 0.9), rgba(9, 13, 15, 0.9) 10%) no-repeat border-box;
-  color: #19b6e5;
-}
-.building_info_button button:active {
-  color: #daa548;
+.building_info_title p:last-child {
+  margin-right: 80px;
 }
 
 @keyframes blink {
