--- a/src/css/globalStyles.scss
+++ b/src/css/globalStyles.scss
@@ -69,25 +69,26 @@ span{
 .trade_base_wrapper{
   position: relative;
   width: 730px;
-  margin: 50px auto 80px 70px;
+  //margin: 50px auto 80px 70px;
   border: 2px solid white;
   border-radius: 12px;
 }
 
 .planet_main_wrapper{
   position: relative;
-  left: 70px;
-  top: 50px;
+  //left: 70px;
+  //top: 50px;
+  width: 100%;
   border-radius: 12px;
-  width: calc(100% - 200px);
-  max-width: 1600px;
-  min-width: 730px;
-  height: calc(100vh - 189px);
+  //width: calc(100% - 200px);
+  //max-width: 1600px;
+  //min-width: 730px;
+  //height: calc(100vh - 389px);
   display: flex;
+  height: 784px;
   padding: 0;
-  margin-bottom: 100px;
   @media (max-width: 1210px){
-    height: calc(100vh + 130px);
+    //height: calc(100vh + 130px);
   }
   &::after{
     border-radius: 12px;
