--- a/src/css/planetStyles.css
+++ b/src/css/planetStyles.css
@@ -6,6 +6,8 @@ input::-webkit-inner-spin-button {
 }
 
 .planet_item {
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   z-index: 1;
   position: relative;
