--- a/src/css/planetStyles.scss
+++ b/src/css/planetStyles.scss
@@ -12,6 +12,8 @@ input::-webkit-inner-spin-button {
 }
 
 .planet_item{
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   z-index: 1;
   position: relative;
