--- a/src/css/tradeStyles.scss
+++ b/src/css/tradeStyles.scss
@@ -133,7 +133,6 @@ $sp_bg: radial-gradient(ellipse 90% 90%, rgba(0,0,0,0.35), rgba(0,0,0,1.0)) no-r
 }
 
 .trade_container{
-  width: 97.2%;
   min-width: 700px;
   position: relative;
   height: 370px;
@@ -146,7 +145,7 @@ $sp_bg: radial-gradient(ellipse 90% 90%, rgba(0,0,0,0.35), rgba(0,0,0,1.0)) no-r
   gap: 20px;
   &::before {
     content: "";
-    background-image: url('src/assets/images/trade_background.jpg');
+    background-image: url('@/assets/images/trade_background.jpg');
     background-size: cover;
     position: absolute;
     top: 0;
