--- a/src/css/globalStyles.scss
+++ b/src/css/globalStyles.scss
@@ -12,8 +12,8 @@
   font-weight:normal;
   font-style:normal;
 }
-$sp_green:  #00E000 !global;
-$sp_yellow:  #daa548 !global;
+$sp_green:  #00E000;
+$sp_yellow:  #daa548;
 
 *{
   margin: 0;
